--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4olEI9tdRDEGIEUYdA7X4",
+      "authorship_tag": "ABX9TyOjQu2dzPMZcpKyUJAgdTJa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,6 +58,29 @@
       "source": [
         "name=input(\"Enter your name:\")\n",
         "print(name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Your name is\", name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BNv8N0h4xTu_",
+        "outputId": "553350e2-fa63-4e8b-89fb-0eb450ce9992"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Your name is Prayag Sathyanath\n"
+          ]
+        }
       ]
     }
   ]
