--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOjQu2dzPMZcpKyUJAgdTJa",
+      "authorship_tag": "ABX9TyPieKjobaEPv7iPrFqMkAln",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Python Fundamentals**"
+        "# **Python Fundamentals**"
       ],
       "metadata": {
         "id": "rmGJdf3PqqRH"
@@ -37,48 +37,119 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ghNubjRrqKCb",
-        "outputId": "8ca4de54-4117-4414-92ff-0c8244efea00"
+        "outputId": "f6dcde95-d567-4761-fd52-eb5a54eff883"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your name:Prayag Sathyanath\n",
-            "Prayag Sathyanath\n"
+            "Enter your name: Prayag Sathyanath\n",
+            "Your name is Prayag Sathyanath\n"
           ]
         }
       ],
       "source": [
-        "name=input(\"Enter your name:\")\n",
-        "print(name)"
+        "name=input(\"Enter your name: \")\n",
+        "print(\"Your name is\", name)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Swapping two variables"
+      ],
+      "metadata": {
+        "id": "8zrzLUCVF8EC"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "print(\"Your name is\", name)"
+        "#Method one - using a temporary variable\n",
+        "a=10\n",
+        "b=5\n",
+        "temp=a\n",
+        "a=b\n",
+        "b=temp\n",
+        "print(\"the value of a is: \"+str(a) + \" and \"+ \"the value of b is: \"+str(b))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "BNv8N0h4xTu_",
-        "outputId": "553350e2-fa63-4e8b-89fb-0eb450ce9992"
+        "id": "AoBcnUMSGFWU",
+        "outputId": "1e01e610-34d5-4972-b83d-fed415785063"
       },
-      "execution_count": 2,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Your name is Prayag Sathyanath\n"
+            "the value of a is: 5 and the value of b is: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Method two - by tuple exchange | unpacking the tuple and assigning the values to the variables in reverse order.\n",
+        "a=10\n",
+        "b=5\n",
+        "a,b=b,a\n",
+        "print(\"the value of a is: \"+str(a) + \" and \"+ \"the value of b is: \"+str(b))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J_TKMfyyH3zm",
+        "outputId": "12a347e3-6fc3-42f7-ed8d-dc8a414d8c72"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the value of a is: 5 and the value of b is: 10\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Method three - by arithmetic operation\n",
+        "a=10\n",
+        "b=5\n",
+        "a=a+b\n",
+        "b=a-b\n",
+        "a=a-b\n",
+        "print(\"the value of a is: \"+str(a) + \" and \"+ \"the value of b is: \"+str(b))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aKh_D5S6IJZC",
+        "outputId": "ef901dda-a4a2-4ec7-c1ee-b459a7137448"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the value of a is: 5 and the value of b is: 10\n"
           ]
         }
       ]
