--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPieKjobaEPv7iPrFqMkAln",
+      "authorship_tag": "ABX9TyP8upoCpGLXMaV0cckpR+dk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +23,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/prayagsat99/python/blob/main/PythonExercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/prayagsat99/Python/blob/main/PythonExercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# **Python Fundamentals**"
+        "# **Python Fundamentals** "
       ],
       "metadata": {
         "id": "rmGJdf3PqqRH"
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,7 +87,7 @@
         "id": "AoBcnUMSGFWU",
         "outputId": "1e01e610-34d5-4972-b83d-fed415785063"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "id": "J_TKMfyyH3zm",
         "outputId": "12a347e3-6fc3-42f7-ed8d-dc8a414d8c72"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
         "id": "aKh_D5S6IJZC",
         "outputId": "ef901dda-a4a2-4ec7-c1ee-b459a7137448"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,6 +153,56 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## String Slicing"
+      ],
+      "metadata": {
+        "id": "XH0CMFkyUKbH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"Prayag Sathyanath\"\n",
+        "print(name[0:10]) #prints from index 0 to 9\n",
+        "print(name[7:])   #prints from index 8 to last char\n",
+        "print(name[:10])  #prints from index 0 to 9\n",
+        "print(name[-12:]) #prints from index -12 to -1\n",
+        "print(name[:-1])  #prints from index -1 to first"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zAtbUi4pUQ6Q",
+        "outputId": "91fd4c7e-15bf-4e90-e854-8a4f16b95ee1"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Prayag Sat\n",
+            "Sathyanath\n",
+            "Prayag Sat\n",
+            "g Sathyanath\n",
+            "Prayag Sathyanat\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "36M-R6yuUZXu"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
