--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8upoCpGLXMaV0cckpR+dk",
+      "authorship_tag": "ABX9TyOemOBt5vZx9GmpAkf6rNeS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -180,7 +180,7 @@
         "id": "zAtbUi4pUQ6Q",
         "outputId": "91fd4c7e-15bf-4e90-e854-8a4f16b95ee1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,10 +196,47 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Print String - Step Indices | Starting Index : Ending Index : Step Count"
+      ],
+      "metadata": {
+        "id": "Wlt7MZVDQxRt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string=\"HelloWorld\"\n",
+        "print(string[::2])\n",
+        "print(string[2:9:3])\n",
+        "print(string[:8:2])"
+      ],
+      "metadata": {
+        "id": "36M-R6yuUZXu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3420ad56-e30e-46eb-d0e9-49ff9c659771"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hlool\n",
+            "lWl\n",
+            "Hloo\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "36M-R6yuUZXu"
+        "id": "gStkdHTqQZGY"
       },
       "execution_count": null,
       "outputs": []
