--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOemOBt5vZx9GmpAkf6rNeS",
+      "authorship_tag": "ABX9TyNObeRXZcQh9sy8sFNK0yhf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -198,7 +198,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Print String - Step Indices | Starting Index : Ending Index : Step Count"
+        "##Print String - Step Slicing | Starting Index : Ending Index : Step Count"
       ],
       "metadata": {
         "id": "Wlt7MZVDQxRt"
@@ -208,18 +208,18 @@
       "cell_type": "code",
       "source": [
         "string=\"HelloWorld\"\n",
-        "print(string[::2])\n",
-        "print(string[2:9:3])\n",
-        "print(string[:8:2])"
+        "print(string[::2])   #prints from 0 index to last index with step2\n",
+        "print(string[2:9:3]) #prints from 2 index to 9-1 index with step3\n",
+        "print(string[:8:2])  #prints from 0 index to 8-1 index with step2"
       ],
       "metadata": {
         "id": "36M-R6yuUZXu",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3420ad56-e30e-46eb-d0e9-49ff9c659771"
+        "outputId": "d13f96aa-28ce-4488-cb6d-af0a1942b490"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,12 +233,85 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##How to Print Reverse of a String using Step Slicing\n"
+      ],
+      "metadata": {
+        "id": "zyb_E-zLSthW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"Prayag\"\n",
+        "print(name[::-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gStkdHTqQZGY",
+        "outputId": "831c581f-dfd4-4610-bfe5-73f29d9c5914"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gayarP\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Palindrom Program using different methods\n"
+      ],
+      "metadata": {
+        "id": "zjQxWZQyTJFW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#method1 - using string step slicing\n",
+        "word=input(\"Enter the word:\")\n",
+        "print(\"Reverse of the string is:\",word[::-1])\n",
+        "if word[::-1] == word :\n",
+        "  print(\" It's a palindrom\")\n",
+        "else:\n",
+        "  print(\"It's not a palindrom\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gTYzDUwGTDgc",
+        "outputId": "676779f3-7444-4f30-cace-679c05147d70"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the word:malayalam\n",
+            "Reverse of the string is: malayalam\n",
+            " It's a palindrom\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gStkdHTqQZGY"
+        "id": "2rZ_mj3NTya7"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     }
   ]
