--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNObeRXZcQh9sy8sFNK0yhf",
+      "authorship_tag": "ABX9TyNc7Wr9FBaa4y/aHlvc6yHU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,28 +36,52 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##Taking an input by prompt and printing the values"
+      ],
+      "metadata": {
+        "id": "WxvC1XepEr4Y"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 70
         },
         "id": "ghNubjRrqKCb",
-        "outputId": "f6dcde95-d567-4761-fd52-eb5a54eff883"
+        "outputId": "6a110304-0ae7-46cc-d789-da43cc39cc4f"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your name: Prayag Sathyanath\n",
-            "Your name is Prayag Sathyanath\n"
+            "Enter your name: prayag\n",
+            "Your name is prayag\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'My name is prayag'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 20
         }
       ],
       "source": [
         "name=input(\"Enter your name: \")\n",
-        "print(\"Your name is\", name)"
+        "print(\"Your name is\", name)\n",
+        "f'My name is {name}'   #use the variable you want to print in{}"
       ]
     },
     {
@@ -219,7 +243,7 @@
         },
         "outputId": "d13f96aa-28ce-4488-cb6d-af0a1942b490"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +278,7 @@
         "id": "gStkdHTqQZGY",
         "outputId": "831c581f-dfd4-4610-bfe5-73f29d9c5914"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +316,7 @@
         "id": "gTYzDUwGTDgc",
         "outputId": "676779f3-7444-4f30-cace-679c05147d70"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,12 +330,124 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Case Program using methods"
+      ],
+      "metadata": {
+        "id": "5d__JYK3-dk1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string1=input(\"Enter the string: \")\n",
+        "if string1.lower()==string1 :\n",
+        "  print(\"Lowercase\")\n",
+        "elif string1.upper()==string1 :\n",
+        "  print(\"Uppercase\")\n",
+        "else:\n",
+        "  print(\"Upper and Lower Combination\")  \n",
+        "    "
+      ],
+      "metadata": {
+        "id": "2rZ_mj3NTya7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f928b9db-a171-4e4b-fc20-addea19d2051"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the string: \n",
+            "Lowercase\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Count the occurence of a character in a string"
+      ],
+      "metadata": {
+        "id": "kf_0s2V7CfI-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string1=\"prayag\"\n",
+        "string1.count(\"a\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3KA67qK3ClI1",
+        "outputId": "ad3f333e-c6a2-4a8f-bc74-7173a943325a"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Check for substring\n"
+      ],
+      "metadata": {
+        "id": "K4YdDj-DF17r"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "team=\"Barcelona\"\n",
+        "'cel' in team"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VpcGc6OFFl4I",
+        "outputId": "4ace8fb1-214f-42c0-91c9-299915358741"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "2rZ_mj3NTya7"
+        "id": "gGyTzbR_FtJo"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
