--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNc7Wr9FBaa4y/aHlvc6yHU",
+      "authorship_tag": "ABX9TyN8enVOYNfv4UZK5Md2UYvN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -268,6 +268,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#method 1 - using step slicing\n",
         "name=\"Prayag\"\n",
         "print(name[::-1])"
       ],
@@ -285,6 +286,32 @@
           "name": "stdout",
           "text": [
             "gayarP\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#method -2 using string reversal + for loop\n",
+        "name=\"Prayag\"\n",
+        "for x in reversed(name):\n",
+        "  print(x,end=\"\")  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4epcaCba5CjU",
+        "outputId": "77c04cd8-9826-4f21-942d-2c5687b7a279"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gayarP"
           ]
         }
       ]
@@ -330,6 +357,41 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "#method2 - for loop +string reversal\n",
+        "reversal=\"\"\n",
+        "word=input(\"Enter the word:\")\n",
+        "for x in reversed(word):\n",
+        "  reversal=reversal+x\n",
+        "print(\"Reverse of the string is: \",reversal)\n",
+        "if reversal==word:\n",
+        "  print(\"It is a palindrom\")\n",
+        "else:\n",
+        "  print(\"Not a palindrom\")   \n",
+        "    "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eQ-0j5yd6Gei",
+        "outputId": "3b92f6bd-32f9-4657-ce76-2d00e8c3d8cf"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the word:dad\n",
+            "Reverse of the string is:  dad\n",
+            "It is a palindrom\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Case Program using methods"
@@ -357,7 +419,7 @@
         },
         "outputId": "f928b9db-a171-4e4b-fc20-addea19d2051"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,6 +443,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#method 1 - using count()\n",
         "string1=\"prayag\"\n",
         "string1.count(\"a\")"
       ],
@@ -391,7 +454,7 @@
         "id": "3KA67qK3ClI1",
         "outputId": "ad3f333e-c6a2-4a8f-bc74-7173a943325a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,6 +465,39 @@
           },
           "metadata": {},
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#method2- using for loop\n",
+        "string1=\"prayag\"\n",
+        "ccount=0\n",
+        "print(string1)\n",
+        "charsearch=input(\"enter the character to search\")\n",
+        "for x in string1:\n",
+        "  if x==charsearch:\n",
+        "   ccount=ccount+1\n",
+        "print(\"The character '\",charsearch,\"' occurs\",ccount,\"times\")  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L_kLRSn878hr",
+        "outputId": "093e7514-362c-48d7-dc89-55c3dfabb5aa"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "prayag\n",
+            "enter the character to searchb\n",
+            "The character ' b ' occurs 0 times\n"
+          ]
         }
       ]
     },
@@ -427,7 +523,7 @@
         "id": "VpcGc6OFFl4I",
         "outputId": "4ace8fb1-214f-42c0-91c9-299915358741"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -445,7 +541,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "gGyTzbR_FtJo"
+        "id": "ilUGgpEs-xYS"
       },
       "execution_count": null,
       "outputs": []
