--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPa1usSfHl4BguZmS0+pQn5",
+      "authorship_tag": "ABX9TyP1/+wn/1i8LdIwAK19KaSP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -576,6 +576,80 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Calculator using classes,objects and methods"
+      ],
+      "metadata": {
+        "id": "815S8wfrofBn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class calculator():\n",
+        "  def __init__(self,x,y,z):\n",
+        "    self.num1=int(x)\n",
+        "    self.num2=int(y)\n",
+        "    self.op=str(z)\n",
+        "\n",
+        "  def addition(self):\n",
+        "    result=(self.num1+self.num2)\n",
+        "    print(result)\n",
+        "\n",
+        "  def subtraction(self):\n",
+        "    result=(self.num1-self.num2)\n",
+        "    print(result) \n",
+        "\n",
+        "  def multiplication(self):\n",
+        "    result=(self.num1*self.num2)\n",
+        "    print(result)  \n",
+        "\n",
+        "  def division(self):\n",
+        "    result=(self.num1/self.num2)\n",
+        "    print(result)\n",
+        "\n",
+        "c2=calculator(10,20,\"Add\")\n",
+        "\n",
+        "if(c2.op)==\"Add\":\n",
+        "   c2.addition()\n",
+        "elif(c2.op)==\"Sub\": \n",
+        "   c2.subtraction() \n",
+        "elif(c2.op)==\"div\": \n",
+        "   c2.division()\n",
+        "elif(c2.op)==\"mul\": \n",
+        "   c2.multiplication() \n",
+        "else:\n",
+        "   print(\"Wrong Operation\")             "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PtoFfgVzoeFq",
+        "outputId": "6bf3bc64-4735-4db9-bbbf-d1f2a18de1b8"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-Zc34e9Qo-dl"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
