--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1/+wn/1i8LdIwAK19KaSP",
+      "authorship_tag": "ABX9TyOgbcfGvV5oPHuwVnf5+Pch",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -566,7 +566,7 @@
         },
         "outputId": "318247ed-afce-4874-aafe-4cf5aba18bac"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -631,7 +631,7 @@
         "id": "PtoFfgVzoeFq",
         "outputId": "6bf3bc64-4735-4db9-bbbf-d1f2a18de1b8"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,21 +643,156 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "###EvenOdd : classes,objects and methods"
+      ],
       "metadata": {
-        "id": "-Zc34e9Qo-dl"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "omd2b51TszZ3"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        " "
+        "class evenodd():\n",
+        "  def __init__  (self,x):\n",
+        "    self.num=x\n",
+        "  \n",
+        "    if self.num % 2 == 0:\n",
+        "      print(\"The number is even\")\n",
+        "    else:\n",
+        "      print(\"The number is odd\")\n",
+        "\n",
+        "check1=evenodd(1)\n"
       ],
       "metadata": {
-        "id": "maSJqM7elqsu"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-Zc34e9Qo-dl",
+        "outputId": "ee6f4318-365f-45d7-aef1-e4d9b1c4daaf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The number is odd\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " ### Prime Number : classes,objects and methods"
+      ],
+      "metadata": {
+        "id": "a9PYt1tgF6W6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class prime():\n",
+        "  def __init__(self,x):\n",
+        "    self.num=x\n",
+        "    self.counter=0\n",
+        "\n",
+        "    for i in range(2,x):\n",
+        "      if self.num%i ==0:\n",
+        "        self.counter=1   \n",
+        "       \n",
+        "\n",
+        "    if self.counter==0 or self.num==2:\n",
+        "      print(self.num,\":The number is a prime number\")\n",
+        "    \n",
+        "    else:  \n",
+        "      print(self.num,\":The number is a non-prime number\") \n",
+        "number1=prime(9)\n"
+      ],
+      "metadata": {
+        "id": "maSJqM7elqsu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a6d14ad0-392f-4520-e7e1-9c48ad9bd112"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9 :The number is a non-prime number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Fibonacci: using input()\n"
+      ],
+      "metadata": {
+        "id": "03U114b9Lgyu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class fib():\n",
+        "  def __init__(self,x):\n",
+        "    self.num1=0\n",
+        "    self.num2=1\n",
+        "    self.n=x\n",
+        "    print(self.num1)\n",
+        "    print(self.num2)\n",
+        "\n",
+        "    for i in range(2,self.n):\n",
+        "      self.num3=self.num1+self.num2\n",
+        "      print(self.num3)\n",
+        "      self.num1=self.num2\n",
+        "      self.num2=self.num3\n",
+        "   \n",
+        "fib1=fib(int(input(\"Enter the value of n:\")))       \n",
+        "      "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r8gKH8yCG0qR",
+        "outputId": "53d6cbf7-255b-4c68-ba80-fcdf331feb45"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the value of n:11\n",
+            "0\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "5\n",
+            "8\n",
+            "13\n",
+            "21\n",
+            "34\n",
+            "55\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "oCZUDOMdMseR"
       },
       "execution_count": null,
       "outputs": []
