--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgbcfGvV5oPHuwVnf5+Pch",
+      "authorship_tag": "ABX9TyOUYFOkZx0qEPp8GAoQ1yrJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -700,7 +700,7 @@
         "    self.num=x\n",
         "    self.counter=0\n",
         "\n",
-        "    for i in range(2,x):\n",
+        "    for i in range(2,(x*x)+1):\n",
         "      if self.num%i ==0:\n",
         "        self.counter=1   \n",
         "       \n",
@@ -717,7 +717,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a6d14ad0-392f-4520-e7e1-9c48ad9bd112"
+        "outputId": "c3f70569-e6be-4e73-8df3-a2f33c0b12d8"
       },
       "execution_count": null,
       "outputs": [
@@ -741,30 +741,31 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "cwN7E6N0rFFs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "source": [
-        "class fib():\n",
-        "  def __init__(self,x):\n",
-        "    self.num1=0\n",
-        "    self.num2=1\n",
-        "    self.n=x\n",
-        "    print(self.num1)\n",
-        "    print(self.num2)\n",
-        "\n",
-        "    for i in range(2,self.n):\n",
-        "      self.num3=self.num1+self.num2\n",
-        "      print(self.num3)\n",
-        "      self.num1=self.num2\n",
-        "      self.num2=self.num3\n",
-        "   \n",
-        "fib1=fib(int(input(\"Enter the value of n:\")))       \n",
-        "      "
+        "### List of prime numbers using filtered function"
       ],
+      "metadata": {
+        "id": "q3MD6FNIrLVL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "r8gKH8yCG0qR",
-        "outputId": "53d6cbf7-255b-4c68-ba80-fcdf331feb45"
+        "id": "XHkjkBBKrLCb",
+        "outputId": "83ccb1d3-7e80-472c-eaea-8e24880ab961"
       },
       "execution_count": null,
       "outputs": [
@@ -772,18 +773,130 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter the value of n:11\n",
-            "0\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "5\n",
-            "8\n",
-            "13\n",
-            "21\n",
-            "34\n",
-            "55\n"
+            "The prime numbers are :   [2, 0, 1]\n",
+            "The non-prime numbers are:\n",
+            "3 4 5 6 7 8 9 10 11 12 13 14 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Get a list of name as an input from the user and make the first letters in caps and print each word as a list in python"
+      ],
+      "metadata": {
+        "id": "Q1GIzXXPIlbP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "names = input(\"Enter a list of names separated by commas: \")\n",
+        "\n",
+        "names_list = names.split(\",\")  # Split the input string into a list of names\n",
+        "names_list = [name.strip().capitalize() for name in names_list]  # Capitalize the first letter of each name and remove leading/trailing whitespace\n",
+        "\n",
+        "for name in names_list:\n",
+        "    print(list(name))  # Convert the name string to a list of characters and print each character\n"
+      ],
+      "metadata": {
+        "id": "oCZUDOMdMseR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46b9cc49-e2a2-47dc-ccbb-b74f7c5c5575"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a list of names separated by commas: prayag,dravid,sachin,messi\n",
+            "['P', 'r', 'a', 'y', 'a', 'g']\n",
+            "['D', 'r', 'a', 'v', 'i', 'd']\n",
+            "['S', 'a', 'c', 'h', 'i', 'n']\n",
+            "['M', 'e', 's', 's', 'i']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Write a Python code to configure the MySQL Connector in your system and Insert data to MySQL Table after which you Fetch and Display data from Table"
+      ],
+      "metadata": {
+        "id": "eBtmJCYfJrZQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import mysql.connector\n",
+        "\n",
+        "# Establish a connection to the MySQL database\n",
+        "db = mysql.connector.connect(\n",
+        "    host=\"localhost\",\n",
+        "    user=\"yourusername\",\n",
+        "    password=\"yourpassword\",\n",
+        "    database=\"yourdatabase\"\n",
+        ")\n",
+        "\n",
+        "# Create a cursor object to interact with the database\n",
+        "cursor = db.cursor()\n",
+        "\n",
+        "# Create a table if it doesn't exist\n",
+        "cursor.execute(\"CREATE TABLE IF NOT EXISTS users (id INT AUTO_INCREMENT PRIMARY KEY, name VARCHAR(255), email VARCHAR(255))\")\n",
+        "\n",
+        "# Insert data into the table\n",
+        "sql = \"INSERT INTO users (name, email) VALUES (%s, %s)\"\n",
+        "values = (\"John Doe\", \"johndoe@example.com\")\n",
+        "cursor.execute(sql, values)\n",
+        "db.commit()\n",
+        "print(cursor.rowcount, \"record inserted.\")\n",
+        "\n",
+        "# Fetch data from the table\n",
+        "cursor.execute(\"SELECT * FROM users\")\n",
+        "result = cursor.fetchall()\n",
+        "\n",
+        "# Display the data\n",
+        "for row in result:\n",
+        "    print(row)\n",
+        "    \n",
+        "# Close the database connection\n",
+        "db.close()"
+      ],
+      "metadata": {
+        "id": "E4IfeqexJOip"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1 = int(input(\"Enter an integer: \"))\n",
+        "num1rev= int(str(num1)[::-1])\n",
+        "\n",
+        "print(\"The reversed integer is:\", num1rev)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Zu9kcThQKd9Y",
+        "outputId": "47ce6384-94b4-4465-b02f-c7edae5c4587"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an integer: 456\n",
+            "The reversed integer is: 654\n"
           ]
         }
       ]
@@ -792,7 +905,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "oCZUDOMdMseR"
+        "id": "h00Fqux6Kvkx"
       },
       "execution_count": null,
       "outputs": []
