--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUYFOkZx0qEPp8GAoQ1yrJ",
+      "authorship_tag": "ABX9TyPZYexoFRZlvwN8z02/laMM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -192,7 +192,7 @@
       "source": [
         "name=\"Prayag Sathyanath\"\n",
         "print(name[0:10]) #prints from index 0 to 9\n",
-        "print(name[7:])   #prints from index 8 to last char\n",
+        "print(name[7:])   #prints from index 7 to last char\n",
         "print(name[:10])  #prints from index 0 to 9\n",
         "print(name[-12:]) #prints from index -12 to -1\n",
         "print(name[:-1])  #prints from index -1 to first"
@@ -202,9 +202,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zAtbUi4pUQ6Q",
-        "outputId": "91fd4c7e-15bf-4e90-e854-8a4f16b95ee1"
+        "outputId": "7cbabff0-1ad9-4c44-e369-3546f300e092"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,12 +741,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "  def fib(x):\n",
+        "    n=x\n",
+        "    num1=0\n",
+        "    num2=1\n",
+        "    print(\"Fibonacci series for \", x ,\"numbers are:\")\n",
+        "    print(num1,end=\" \")\n",
+        "    print(num2,end=\" \")\n",
+        "\n",
+        "    for i in range(2,n):\n",
+        "      num3=num1+num2\n",
+        "      print(num3,end=\" \")\n",
+        "      num1=num2\n",
+        "      num2=num3\n",
+        "\n",
+        "  inp=input(\"Enter the n value:\")\n",
+        "  fib(int(inp))      \n",
+        "\n"
+      ],
       "metadata": {
-        "id": "cwN7E6N0rFFs"
+        "id": "cwN7E6N0rFFs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "21e33ef2-d83b-4a65-bb5a-9748cd451852"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter the n value:10\n",
+            "Fibonacci series for  10 numbers are:\n",
+            "0 1 1 2 3 5 8 13 21 34 "
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -807,7 +839,7 @@
         },
         "outputId": "46b9cc49-e2a2-47dc-ccbb-b74f7c5c5575"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,7 +921,7 @@
         "id": "Zu9kcThQKd9Y",
         "outputId": "47ce6384-94b4-4465-b02f-c7edae5c4587"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
