--- a/PythonExercises.ipynb
+++ b/PythonExercises.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZYexoFRZlvwN8z02/laMM",
+      "authorship_tag": "ABX9TyPltf8Yn9+cVvW0Ufh6949t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -791,23 +791,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def prime(n):\n",
+        "    if n < 2:\n",
+        "        return False\n",
+        "    for x in range(2, n):\n",
+        "        if n % x == 0:\n",
+        "            return False\n",
+        "    return True\n",
+        "\n",
+        "f1 = filter(prime, range(15))\n",
+        "listf1 = list(f1)\n",
+        "\n",
+        "print(\"The prime numbers are:\", listf1)\n",
+        "\n",
+        "print(\"The non-prime numbers are:\")\n",
+        "for x in range(15):\n",
+        "    if x not in listf1:\n",
+        "        print(x, end=\" \")"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "XHkjkBBKrLCb",
-        "outputId": "83ccb1d3-7e80-472c-eaea-8e24880ab961"
+        "outputId": "e42d924d-415d-4d84-8920-345599c8c8ec"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "The prime numbers are :   [2, 0, 1]\n",
+            "The prime numbers are: [2, 3, 5, 7, 11, 13]\n",
             "The non-prime numbers are:\n",
-            "3 4 5 6 7 8 9 10 11 12 13 14 "
+            "0 1 4 6 8 9 10 12 14 "
           ]
         }
       ]
